[package]
name = "mdbook-repl"
version = "0.2.7"
edition = "2021"
license = "MIT"
readme = "../README.md"
keywords = ["mdbook", "repl", "plugin", "preprocessor"]
authors = ["MR-Addict <MR-Addict@qq.com>"]
repository = "https://github.com/MR-Addict/mdbook-repl"
documentation = "https://mr-addict.github.io/mdbook-repl"
description = "A rust based mdbook preprocessor that allows you to execute code in your mdbook without any server. Python, Typescript, Javascript etc."

[dependencies]
clap = "4.5.18"
mdbook = "0.4.40"
regex = "1.10.6"
rust-embed = "8.5.0"
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["v4"] }
